# GaiaRemotePictureService

./: .gitignore  README.md
Native/: CMakeLists.txt
Native/GaiaRemotePictureClient/: CMakeLists.txt  GaiaRemotePictureClient.hpp  RemotePictureClient.cpp  RemotePictureClient.hpp
Native/GaiaRemotePictureServer/: CMakeLists.txt  Controller.cpp  Controller.hpp  Launcher.cpp
Native/GaiaRemotePictureViewer/: CMakeLists.txt  Launcher.cpp
